[package]
name = "extrude-polyline"
version = "0.1.0"
edition = "2021"
author = "Lukas Hermann"
repository = "https://github.com/lsh/extrude-polyline"
homepage = "https://github.com/lsh/extrude-polyline"
description = "A port of Matt Deslauriers's extrude-polyline package."
license-file = "LICENSE"


[dependencies]
